# theodorblom.com

./: .gitignore  README.md  app.py  config.py  footer.php  header.php  index.html  index.php  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
css/: style.css
js/: nav.js
resources/css/: main.css
resources/js/: navbar.js  navdrop.js  timer.js
scripts/: compile_sass.py  wsgi.py
src/app/: __init__.py  config.py  default_config.py  main.py
src/app/database/: __init__.py  models.py
src/auth/: __init__.py  authentication.py  login_manager.py
src/stats/: __init__.py
src/website/: __init__.py  models.py  statistics.py
src/website/static/css/: blog.css  home.css
src/website/static/css_old/: style.css
src/website/static/js/: base.js  blog.js  home.js
src/website/templates/: base.html  index.html  stats.html
src/website/views/: __init__.py  auth.py  blog.py  home.py
static/css/: style.css
templates/: base.html  blog.html  index.html
tests/: conftest.py
tests/functional/: test_views_auth.py  test_views_blog.py  test_views_home.py
tests/unit/: test_models.py  test_statistics.py
timer/: index.php
website/: __init__.py  models.py  statistics.py
website/static/: robots.txt
website/static/css/: auth.css  blog.css  codehilite.css  home.css  style.css
website/static/js/: home.js  nav.js
website/templates/: base.html  index.html
website/templates/auth/: create-user.html  login.html
website/templates/blog/: editor.html  index.html  post.html
website/views/: auth.py  blog.py  home.py
(+46 files in other folders)
